src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    --main-font: "Nominee";
    --main-text: #fff;
    scroll-behavior: smooth;
}

* {
    font-family: var(--main-font);
}

.border {
    border: 1px solid #ccc;
}

body {
    @apply bg-app_bg;
    overflow-x: hidden;
}

.app-bg {
    @apply text-[var(--main-text)];
}

@font-face {
    font-family: "Redzone";
    src: url("/fonts/VTFRedzone-Classic.ttf") format("truetype");
}

@font-face {
    font-family: "Nominee";
    src: url("/fonts/Nominee-Medium.ttf") format("truetype");
}

.font-redzone {
    font-family: "Redzone";
}

.font-nominee {
    font-family: "Nominee";
}

.col {
    @apply flex flex-col flex-wrap;
}

.row {
    @apply flex flex-row flex-wrap;
}

.center {
    @apply items-center justify-center;
}

button {
    @apply active:scale-90 transition-transform duration-200;
}

.screen {
    /* @apply min-h-[60dvh]; */
}

.round-gradient {
    z-index: -1;
    /* min-height: 100dvh; */
    /* background: radial-gradient(#9500b3, #56b1fc, transparent); */
    /* background: radial-gradient(circle at top right, #292442, #330e3a, #1d1b27); */
    background: radial-gradient(circle at top right, #292442, #1d1b27);
}

